# crustdown

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: ci.yml
src/: content_parser.rs  content_reader.rs  content_render.rs  content_router.rs  content_writer.rs  entities.rs  main.rs
src/_templates/: index.html  layout.html  post.html
tests/: cli_test.rs
tests/file_fixtures/inputs/: _site.yml
tests/file_fixtures/inputs/posts/: 2025-05-04-welcome-to-jekyll.markdown
tests/file_fixtures/outputs/: index.html
tests/file_fixtures/outputs/posts/2025-05-04-welcome-to-jekyll/: index.html
