[package]
name = "crustdown"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
description = "A static site generator for markdown content"
license = "MIT"
repository = "https://github.com/fferegrino/crustdown"
readme = "readme.md"

[[bin]]
name = "crustdown"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
cargo-tag = "0.1.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
markdown = "1.0.0"
minijinja = "2.9.0"
pretty_assertions = "1"
serde = { version = "1.0.219", features = ["derive"] }
sluggify = "0.1.0"
tempfile = "3.19.1"
textwrap = "0.16.2"

[dev-dependencies]
copy_dir = "0.1.3"
